kubernetes/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fastapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/customersegmentations-deploy-network: "true"
        io.kompose.service: fastapi
    spec:
      containers:
        - image: naz2001r/fastapi
          name: fastapi
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
