kubernetes/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app: streamlit
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/customersegmentations-deploy-network: "true"
        app: streamlit
    spec:
      containers:
        - name: streamlit
          image: naz2001r/streamlit
          ports:
            - containerPort: 8501
