kubernetes/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app: fastapi
  name: fastapi
spec:
  type: LoadBalancer
  ports:
    - port: 8000
  selector:
    app: fastapi
